gcc/testsuite/g++.dg/pph/d1symnotinc.cc
// { dg-error "Cannot open PPH file for reading" }
#define NAME v
#define VALUE 1
#include "d0symnotinc.h"
